<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#18121F"
    android:orientation="vertical"
    tools:context=".BoMonChiTiet">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:gravity="start|center"
        android:paddingLeft="10dp"
        android:text="@string/thong_tin_mon_hoc"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:background="@drawable/border_bottom">


        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="start|center"
            android:textColor="@android:color/white"
            android:paddingLeft="10dp"
            android:text="@string/ma_mon_hoc"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/maMonHoc"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="right"
            android:textColor="@android:color/white"
            android:paddingRight="5dp"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:background="@drawable/border_bottom">


        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="start|center"
            android:textColor="@android:color/white"
            android:paddingLeft="10dp"
            android:text="@string/ten_mon_hoc"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tenMonHoc"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="right"
            android:textColor="@android:color/white"
            android:paddingRight="5dp"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:background="@drawable/border_bottom">


        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="start|center"
            android:textColor="@android:color/white"
            android:paddingLeft="10dp"
            android:text="@string/bo_mon"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/maBoMon"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="right"
            android:textColor="@android:color/white"
            android:paddingRight="5dp"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:background="@drawable/border_bottom">


        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="start|center"
            android:textColor="@android:color/white"
            android:paddingLeft="10dp"
            android:text="@string/so_tin_chi"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/soTinChi"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="right"
            android:textColor="@android:color/white"
            android:paddingRight="5dp"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:background="@drawable/border_bottom">


        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="start|center"
            android:textColor="@android:color/white"
            android:paddingLeft="10dp"
            android:text="@string/so_tiet"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/soTiet"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="right"
            android:textColor="@android:color/white"
            android:paddingRight="5dp"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:background="@drawable/border_bottom">


        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="start|center"
            android:textColor="@android:color/white"
            android:paddingLeft="10dp"
            android:text="@string/mo_ta"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/moTa"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="right"
            android:textColor="@android:color/white"
            android:paddingRight="5dp"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_marginBottom="2dp"
        android:gravity="center|bottom"
        android:orientation="horizontal">
        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/btnXoa"
            android:background="@android:color/holo_red_dark"
            android:text="@string/xoa"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/btnChinhSua"
            android:background="@android:color/holo_green_dark"
            android:text="@string/chinh_sua"/>
    </LinearLayout>



</LinearLayout>